--- a/build.yml
+++ b/build.yml
@@ -29,4 +29,4 @@ run:
         npm install --silent
         npm run test
         npm run build
-      mkdir -p connect/chat-interface/$BUILD_VERSION/ && cp -r build connect/chat-interface/$BUILD_VERSION/
+      rm -rf connect && mkdir -p connect/chat-interface/$BUILD_VERSION/ && cp -r build connect/chat-interface/$BUILD_VERSION/
